@@ -694,7 +694,7 @@ Use argument as the entire contents of DATA.
 
 If no argument is provided, user will be prompted to supply value.
 
-If the argument '-' is provided the data will be read from STDIN with no prompt (same as -g).
+If the argument '-' is provided the data will be read from STDIN with no prompt.
 
 If the argument does not contain any literal (0x0a) or representative (0x5c, 0x6e or %NEWLINE%) newline characters, it will be treated as a filename.  If the file is open-able, the contents of the file will be used as the data portion.  If the file cannot be opened, Swaks will error and exit.
 
@@ -786,7 +786,7 @@ These options allow a way to change headers that already exist in the DATA.  '--
 
 =item -g
 
-If specified, Swaks will read the DATA value for the mail from STDIN.  This is equivalent to "--data -".  If there is a From_ line in the email, it will be removed (but see -nsf option).  Useful for delivering real message (stored in files) instead of using example messages.
+This option is a direct alias to '--data -' (read DATA from STDIN).  It is totally secondary to --data.  Any occurrance of --data will cause -g to be ignored.  This option cannot be negated with the 'no-' prefix.  This option is deprecated and will be removed in a future version of Swaks.
 
 =item --no-data-fixup, -ndf
 
