@@ -1,6 +1,0 @@
-
-auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
-
-title: g, command line, no-option
-
-test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" --g '' --no-g STDIN:%TESTDIR%/g-stdin.txt
