@@ -1,7 +1,0 @@
-
-auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
-
-title: g, config, no-option
-
-pre action: MERGE %OUTDIR%/swaksrc-%TESTID% string:'g \nno-g'
-test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" --config %OUTDIR%/swaksrc-%TESTID% STDIN:%TESTDIR%/g-stdin.txt
