@@ -1,7 +1,0 @@
-
-auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
-
-title: g, env var, no-option
-
-pre action: SET_ENV SWAKS_OPT_g ''
-test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver"  --no-g STDIN:%TESTDIR%/g-stdin.txt
