@@ -1,0 +1,8 @@
+
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
+
+title: -g overwritten if --data present in later option level
+
+pre action: SET_ENV SWAKS_OPT_g ''
+test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" \
+    --data 'this is the%NEWLINE%correct body'
