@@ -1,0 +1,9 @@
+
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
+
+title: -g removal doesn't disturb --header-Foo processing when it appears immediately following
+
+test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" \
+    --data 'this is the%NEWLINE%correct body' \
+    -g \
+    --header-Custom 'This header should appear in the body'
