@@ -1,0 +1,12 @@
+
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
+
+title: -g rewrite doesn't disturb --header-Foo processing when it appears immediately following
+
+pre action: MERGE %OUTDIR%/%TESTID%.eml string:'this is the%NEWLINE%correct body'
+test action: CMD_CAPTURE %SWAKS% --dump DATA --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver --server "ser.ver" \
+    -g \
+    --header-Custom 'This header should appear in the body' \
+    STDIN:%OUTDIR%/%TESTID%.eml
+
+
