@@ -1,13 +1,0 @@
-DATA Info:
-  data = <<.
-Date: Wed, 03 Nov 1999 11:24:29 -0500
-To: user@host1.nodns.test.swaks.net
-From: recip@host1.nodns.test.swaks.net
-Subject: test Wed, 03 Nov 1999 11:24:29 -0500
-Message-Id: <19991103112429.047942@localhost>
-X-Mailer: swaks v99999999.9 jetmore.org/john/code/swaks/
-
-This is a test mailing
-
-
-.
