@@ -351,18 +351,19 @@
   # 1381 no-strip-from, command line, valid arg (-option=)
   # 1382 no-strip-from, command line, valid arg (--option=)
 01400 --g
+  # note that "no-" processing was removed for this option and the option as a whole is now deprecated
   1400 g, command line, no arg
   # 1401 g, command line, valid arg
   # 1402 g, command line, invalid arg
-  1403 g, command line, no-option
+#  1403 g, command line, no-option
   1410 g, config, no arg
   # 1411 g, config, valid arg
   # 1412 g, config, invalid arg
-  1413 g, config, no-option
+#  1413 g, config, no-option
   1420 g, env var, no arg
   # 1421 g, env var, valid arg
   # 1422 g, env var, invalid arg
-  1423 g, env var, no-option
+#  1423 g, env var, no-option
   1430 g command line, no arg (-option)
   # 1431 g, command line, valid arg (-option=)
   # 1432 g, command line, valid arg (--option=)
@@ -381,6 +382,15 @@
     9 data, quoting already-quoted leading dots
     10 data, quoting trailing dot
     11 data, - reads from STDIN
+    12 --no-data-fixup actually works (prevents data from being rewritten
+    13 -g ignored if --data present in same option level (before)
+    14 -g ignored if --data present in same option level (after)
+    15 -g ignored if --data present in previous option level
+    16 -g overwritten if --data present in later option level
+    17 -g removal doesn't disturb --header-Foo processing when it appears immediately following
+    18 -g rewrite doesn't disturb --header-Foo processing when it appears immediately following
+    19 -g removal doesn't distrub --opt=foo processing when it appears immediately following
+    20 -g rewrite doesn't distrub --opt=foo processing when it appears immediately following
 05100 --body
     0 - works inline
     1 - '-' reads from stdin
